--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -82,9 +82,9 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.5/waypoints.min.js"></script>
 
     <link rel="stylesheet" href="/stylesheets/app.css">
+    <script src="/javascript/global.js"></script>
 
-    <script src="/javascript/safe_stop_global.js"></script>
-    <script src="/javascript/safe_stop_client_global.js"></script>
+
 
     {{/*<!-- Stay Standalone -->*/}}
     {{/*<script type="text/javascript">(function(a,b,c){if(c in b&&b[c]){var d,e=a.location,f=/^(a|html)$/i;a.addEventListener("click",function(a){d=a.target;while(!f.test(d.nodeName))d=d.parentNode;"href"in d&&(chref=d.href).replace(e.href,"").indexOf("#")&&(!/^[a-z\+\.\-]+:/i.test(chref)||chref.indexOf(e.protocol+"//"+e.host)===0)&&(a.preventDefault(),e.href=d.href)},!1)}})(document,window.navigator,"standalone");</script>*/}}
